--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </svg>
 
             <nav class="menu">
-                <a href="https://tiendatcako.github.io/indexx/">Orchid Queen</a><br />
+                <a href="https://tiendatcako.github.io/orchildqueen/">Orchid Queen</a><br />
                 <a href="https://tiendatcako.github.io/cako/" class="menu__link" data-pc="pc-second">Cako</a><br />
                 <a href="#" class="menu__link" data-pc="pc-third">Mysterious forest</a><br />
                 <a href="#" class="menu__link" data-pc="pc-fourth">Photoshop</a><br />
@@ -242,7 +242,7 @@
                         </div>
                         <div class="jm jm-r-big jm-os-2">
                             <ul class="no-list view">
-                                <li><a class="active" href="https://tiendatcako.github.io/indexx/" data-project-name="helias">Orchid Queen</a></li>
+                                <li><a class="active" href="https://tiendatcako.github.io/orchildqueen/" data-project-name="helias">Orchid Queen</a></li>
                                 <li><a href="https://tiendatcako.github.io/cako/" data-project-name="hobokenyogi">Cako</a></li>
                                 <li><a href="#" data-project-name="buzzworthy">Mysterious forest</a></li>
                                 <li><a href="#" data-project-name="gatto">Photoshop</a></li>
