--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         </h1>
                     </div>
                     <div class="jm jm-r-big jm-os-2">
-                        <p>Hello! I’m <br />Tiến Đạt, I am <br>a designer <br>and a UX-UI design. I am studying at <a class="creative" href="https://www.arena-multimedia.vn/" target="_blank">Arena Multimedia</a> in TP HCM, while also taking on freelance projects that pique my interest.</p>
+                        <p>Hello! I’m <br />Tiến Đạt, Mình là <br>một designer <br>và là một UX-UI designer. Mình đang theo học tại <a class="creative" href="https://www.arena-multimedia.vn/" target="_blank">Arena Multimedia</a> tại TP HCM, mình quan tâm đến các dự án cá nhân thương mại rất vui được làm quen.</p>
                     </div>
                 </section>
                 <div class="ot"></div>                                 
@@ -325,7 +325,7 @@
                         </div>
                         <div class="jm jm-r-xl jm-os-1">
                             <div class="serv-description">
-                                <p>Design, strategy, management, creative direction & development are my specialities. In all my projects, I find that efficient work-flows, excellent communication skills and a dose of self-discipline are key - a strong work ethic has driven my success in a myriad of specialties.</p>
+                                <p>Thiết kế, tạo chuyển động, chỉnh sửa video, và đôi khi cả làm nhạc nữa là sở trường của mình. Trong tất cả các dự án của mình , mình thấy rằng sử dụng hiệu quả các công cụ, các kĩ năng giao tiếp giúp mình hoàn thành dự án một cách nhanh và hiểu quả hơn.</p>
                             </div>
                         </div>
                     </div>
