--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         </h1>
                     </div>
                     <div class="jm jm-r-big jm-os-2">
-                        <p>Hello! I’m <br />Tiến Đạt, Mình là <br>một designer <br>và là một UX-UI designer. Mình đang theo học tại <a class="creative" href="https://www.arena-multimedia.vn/" target="_blank">Arena Multimedia</a> tại TP HCM, mình quan tâm đến các dự án cá nhân thương mại rất vui được làm quen.</p>
+                        <p>Hello! I’m <br />Tiến Đạt, là <br>một designer <br>và là một UX-UI designer. Mình đang theo học tại <a class="creative" href="https://www.arena-multimedia.vn/" target="_blank">Arena Multimedia</a> tại TP HCM, mình quan tâm đến các dự án cá nhân thương mại rất vui được làm quen.</p>
                     </div>
                 </section>
                 <div class="ot"></div>                                 
