--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="favicon.png" />
    
     
-    <title>Tiến Đạt &mdash; Digital Designer</title>
+    <title>Tiến Đạt &mdash; Graphic Designer</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500,800,900&display=swap" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
 
